objects/MasterItemMiscJunction__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this object is created to associate an Item to this junction to create Quote Line</description>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipName>MiscellaneousItemJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Configurator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this field contains the look-up to the Master Configurator so that when this master is selected, the Item associated to this junction will be created as Quote Line Item</description>
        <label>Master Configurator</label>
        <referenceTo>Master_Configurator__c</referenceTo>
        <relationshipName>MiscellaneousItemJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MasterItemMiscJunction</label>
    <nameField>
        <displayFormat>MIJ-{00000}</displayFormat>
        <label>MasterItemMiscJunction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MasterItemMiscJunction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>